--- a/style.css
+++ b/style.css
@@ -279,6 +279,12 @@ cite{
 }
 
 /* Rounded Corners CSS */
+.rounded-corners {
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px;
+}
+
 .clear {font-size: 1px; height: 1px; margin-bottom: 20px;} /* Margin replaced the #sidebar ul margin */
 
 #sidebar ul li{
